Making the top navigation sticky

--- a/css/layout.css
+++ b/css/layout.css
@@ -16,6 +16,7 @@
 }
 
 .nav-top {
+    overflow: hidden;
     background-image: linear-gradient(whitesmoke, white);
     border-bottom: 1px solid whitesmoke;
     display: flex;
