--- a/css/components.css
+++ b/css/components.css
@@ -120,3 +120,13 @@
 .nav__link:hover::before {
     width: 100%;
 }
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.sticky + .content {
+    padding-top: 48px;
+}
