--- a/css/layout.css
+++ b/css/layout.css
@@ -36,7 +36,8 @@
 }
 
 .footer {
-    height: 10rem;
     color: white;
     background-color: var(--C1);
+    display: flex;
+    flex-direction: column;
 }
