--- a/css/components.css
+++ b/css/components.css
@@ -84,7 +84,7 @@
 }
 
 .user-profile > * {
-    transition: all .4s;
+    transition: all 200ms;
 }
 
 
@@ -125,6 +125,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    box-shadow: 0px 1px 10px #999;
 }
 
 .sticky + .content {
@@ -141,24 +142,17 @@
     margin-bottom: 2rem;
 }
 
-.banner__title {
+.banner-title {
     font-size: 2.5rem;
-    width: 60%;
-    margin-left: 4rem;
+    flex: 0 0 60%;
 }
 
-.banner__info {
+.banner-info {
     font-size: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    flex-grow: 1;
-    margin-right: 4rem;
-}
-
-.banner__title, .banner__info {
-    margin-top: 4rem;
-    margin-bottom: 8rem;
+    flex: 1;
 }
 
 .banner__venue, .banner__date {
@@ -191,18 +185,14 @@
 
 .footer__copyright {
     font-size: 1.2rem;
-    margin-bottom: 1rem;
     text-align: center;
 }
 
 .footer__logo {
     height: 6rem;
-    margin-left: 10rem;
-    margin-top: 4rem;
 }
 
 .footer__social {
-    margin-right: 10rem;
     font-size: 1.6rem;
 }
 
@@ -227,4 +217,50 @@
 
 #connect {
     text-align: center;
+}
+
+
+
+/**********************************/
+/*             CONTENT            */
+
+.home-content {
+    display: flex;
+}
+
+.content-aside {
+    background-color: whitesmoke;
+    flex: 0 0 25%;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+}
+
+.content-main {
+    flex: 1;
+}
+
+.content-box {
+    background-color: white;
+    margin-bottom: 2rem;
+    padding: 5rem;
+}
+
+.content-box__title {
+    color: var(--C1);
+    font-size: 4.2rem;
+    margin: 0 0 2rem;
+}
+
+.content-box__text {
+    color: var(--C6);
+    font-size: 1.6rem;
+    text-align: justify;
+}
+
+.content-box--grey {
+    background-color: whitesmoke;
+}
+
+.content-box--grey > .content-box__title {
+    text-align: right;
 }
