--- a/css/layout.css
+++ b/css/layout.css
@@ -18,6 +18,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    padding: 4rem 4rem 8rem;
     display: flex;
 }
 
@@ -35,9 +36,15 @@
     background-color: azure;
 }
 
+.home-content {
+    padding: 4rem 4rem;
+    background-image: linear-gradient(to bottom right, var(--C0), white);
+}
+
 .footer {
     color: white;
     background-color: var(--C1);
+    padding: 1.5rem 10rem;
     display: flex;
     flex-direction: column;
 }
