--- a/css/components.css
+++ b/css/components.css
@@ -257,10 +257,62 @@
     text-align: justify;
 }
 
+.content-box__text:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
 .content-box--grey {
-    background-color: whitesmoke;
+    background-color: #F0F0F0;
 }
 
 .content-box--grey > .content-box__title {
     text-align: right;
+    margin-bottom: 3rem;
+}
+
+.speaker-box {
+    padding: 1.5rem 2rem;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+    background-color: white;
+    text-align: center;
+    overflow: hidden;
+    color: var(--C7);
+    border-radius: 5%;
+    transition: 0.2s;
+    cursor: pointer;
+    width: 200px;
+    height: 250px;
+}
+
+.speaker-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+}
+
+.speaker__picture {
+    height: 12rem;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+
+.speaker__name {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+}
+
+.speaker__title {
+    font-size: 1.4rem;
+    font-weight: 200;
+}
+
+.speaker-box:hover{
+    box-shadow: 0px 1px 10px #999;
+    color: var(--C6);
+}
+
+.speaker-box:hover > .speaker__picture {
+    border: 4px solid var(--C1);
 }
