--- a/css/components.css
+++ b/css/components.css
@@ -23,7 +23,7 @@
     font-size: 1.6rem;
     color: inherit;
     border: none;
-    border-bottom: 1px solid var(--C6);
+    border-bottom: 2px solid var(--C7);
     padding: 1rem 2rem;
     width: 80%;
     transition: all .8s;
@@ -33,7 +33,7 @@
 .search__input:focus {
     width: 100%;
     outline: none;
-    border-bottom: 1px solid var(--C1);
+    border-bottom: 2px solid var(--C1);
 }
 
 .search__button {
@@ -224,21 +224,6 @@
 /**********************************/
 /*             CONTENT            */
 
-.home-content {
-    display: flex;
-}
-
-.content-aside {
-    background-color: whitesmoke;
-    flex: 0 0 25%;
-    margin-left: 2rem;
-    margin-bottom: 2rem;
-}
-
-.content-main {
-    flex: 1;
-}
-
 .content-box {
     background-color: white;
     margin-bottom: 2rem;
@@ -342,6 +327,7 @@
 
 .publication__image:hover {
     box-shadow: 0px 5px 30px #999;
+    outline: 1px solid var(--C6);
 }
 
 .journals-list__list{
@@ -357,4 +343,108 @@
 
 .journals-image {
     display: flex;
+}
+
+
+
+/********************************/
+/*             ASIDE            */
+
+.content-aside {
+    padding: 1.5rem 1.5rem;
+}
+
+.aside-box {
+    padding: 2rem 1.5rem 1rem;
+    outline: 0.5px solid var(--C1);
+}
+
+.aside-box:not(:first-child) {
+    margin-top: 1.5rem;
+}
+
+.aside-heading {
+    margin: -2rem -1.5rem 1rem;
+    font-size: 1.8rem;
+    text-align: center;
+    background-color: var(--C1);
+    color: white;
+}
+
+.aside-box__text {
+    font-size: 1.6rem;
+}
+
+.aside-box__text:not(:last-child) {
+    margin-bottom: 1.5rem;
+}
+
+.latest-news__list{
+    list-style: none;
+    margin-top: 3rem;
+    margin-bottom: 4rem;
+}
+
+.latest-news__item {
+    margin-bottom: 3rem;
+}
+
+.aside-box__icon {
+    color: var(--C7);
+    margin-right: 1rem;
+}
+
+.aside-box__text--details {
+    font-size: 1.4rem;
+}
+
+.aside-box__text--main-text {
+    font-weight: 600;
+    color: var(--C2);
+}
+
+.aside-box__text--countdown-text {
+    text-align: center;
+}
+
+.aside-box__text--countdown {
+    text-align: center;
+    font-size: 2rem;
+    color: var(--C1);
+    font-weight: 600;
+}
+
+.button {
+    border: none;
+    padding: 10px 35px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: inherit;
+    font-weight: 600;
+    transition-duration: 0.4s;
+    cursor: pointer;
+} 
+
+.aside-box__button {
+    color: var(--C1); 
+    border: 2.5px solid var(--C1);
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.aside-box__button:hover {
+    background-color: var(--C1);
+    color: white;
+}
+
+.aside-box__button:active {
+    background-color: var(--C0);
+}
+
+.aside-box__button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
