--- a/css/components.css
+++ b/css/components.css
@@ -465,3 +465,30 @@
     margin-left: 2rem;
     margin-bottom: 1rem;
 }
+
+.sponsor-container {
+    margin-top: auto;
+    padding: 1rem 5rem;
+}
+
+.sponsor__image {
+    max-width: 100%;
+    max-height: 20rem;
+}
+
+.sponsor__title {
+    font-size: 1.4rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.sponsor-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sponsor-item:not(:last-child) {
+    margin-bottom: 5rem;
+}
