--- a/css/layout.css
+++ b/css/layout.css
@@ -67,3 +67,14 @@
 .content-main {
     flex: 1;
 }
+
+.page-banner {
+    background-image: url("../img/technology.png");
+    background-color: var(--C2);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    padding: 4rem;
+}
