--- a/css/components.css
+++ b/css/components.css
@@ -588,7 +588,10 @@
     padding: 4rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+}
+
+.speaker-item:not(:first-child) {
+    margin-top: 2rem;
 }
 
 .speaker__name {
@@ -605,6 +608,7 @@
     height: 20rem;
     border-radius: 50%;
     margin-right: 3rem;
+    margin-left: 5%;
 }
 
 .speaker__talk-title-heading {
@@ -625,12 +629,13 @@
     background-color: #777;
     color: white;
     cursor: pointer;
-    padding: 18px;
+    padding: 1.8rem;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-family: inherit;
+    font-size: 1.5rem;
   }
   
   .active, .collapsible-button:hover {
@@ -642,7 +647,7 @@
     color: white;
     font-weight: bold;
     float: right;
-    margin-left: 5px;
+    margin-left: 0.5rem;
   }
   
   .active:after {
@@ -650,9 +655,18 @@
   }
   
   .collapsible-content {
-    padding: 0 18px;
+    padding: 0 10rem;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: #f1f1f1;
+  }
+
+  .collapsible-content__text {
+    font-family: inherit;
+    font-size: 1.6rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    text-align: justify;
+    line-height: 2.5rem;
   }
