--- a/css/layout.css
+++ b/css/layout.css
@@ -28,7 +28,7 @@
     background-image: linear-gradient(whitesmoke, white);
     border-bottom: 1px solid whitesmoke;
     display: flex;
-
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
@@ -78,4 +78,13 @@
     background-size: cover;
     color: white;
     padding: 4rem;
+}
+
+.coming-soon-content {
+    background-image: linear-gradient(to bottom right, var(--C0), white);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
