--- a/css/layout.css
+++ b/css/layout.css
@@ -40,6 +40,7 @@
 .home-content {
     padding: 4rem 4rem;
     background-image: linear-gradient(to bottom right, var(--C0), white);
+    display: flex;
 }
 
 .footer {
@@ -48,11 +49,6 @@
     padding: 1.5rem 10rem;
     display: flex;
     flex-direction: column;
-}
-
-
-.home-content {
-    display: flex;
 }
 
 .content-aside {
@@ -87,4 +83,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.venue-banner {
+    background-image: url("../img/ravenala-attitude.jpg");
+    height: 25rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 4rem;
+    margin: -3rem -3rem 2rem;
 }
