--- a/css/layout.css
+++ b/css/layout.css
@@ -93,3 +93,8 @@
     padding: 4rem;
     margin: -3rem -3rem 2rem;
 }
+
+.travel-page {
+    background-color: white;
+    padding: 2.5rem 3rem;
+}
